<resources>
    <string name="app_name">YourReader</string>
    <string name="yourreader">YourReader</string>
    <string name="easily_listen_anything_you_want_to_read">Easily Listen anything you want to read</string>
    <string name="continue_with_id_password">Continue with ID Password</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="signup">SignUp</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="proceed_with_your">Proceed with your</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="back">Back</string>
    <string name="registration">Registration</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signin">SignIn</string>
    <string name="register">Register</string>
    <string name="or_continue_with">Or Continue with</string>
    <string name="signout">SignOut</string>
    <string name="reading_now">Reading Now</string>
    <string name="books">Books and Documents </string>
    <string name="documents">Documents</string>
    <string name="have_read">Done Reading</string>
    <string name="formats">Formats</string>
    <string name="folders">Folders</string>
    <string name="downlaods">Downloads</string>
    <string name="settings">Settings</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="todo">TODO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="how_to_use">How to use</string>
    <string name="home">Home</string>
    <string name="fav">Favorites</string>
    <string name="search">Search</string>
    <string name="premium">Premium</string>
    <string name="reset">Reset</string>
    <string name="pitch">Pitch</string>
    <string name="speed">Speed</string>
    <string name="noting_loaded">Nothing Loaded</string>
    <string name="open_file">Open File</string>
    <string name="play">Play</string>
    <string name="trash">Trash</string>
    <string name="assignment_1">AssignMent 1</string>
    <string name="_3mb">3MB</string>
    <string name="pdf">PDF</string>
    <string name="_2_3x">2.3X</string>
    <string name="done">Done</string>


    <string-array name="upgradeEntries">
        <item>Upgrade</item>
        <item>Cancel</item>
    </string-array>

    <string-array name="upgradeValues">
        <item>Upgrade</item>
        <item>Cancel</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="adjust_brightness_by_swiping_up_and_down_on_left_side_of_screen">Adjust Brightness by swiping Up and Down on Left Side of Screen</string>
    <string name="brightness_by_swipe">Brightness By Swipe</string>
    <string name="reading">Reading</string>
    <string name="keep_screen_on">Keep Screen On while Reading without touching</string>
    <string name="enable_dark_mode">Enable Dark Mode by turning on the switch</string>
    <string name="permissions">Permissions</string>
    <string name="access_pdf_and_docs">Access Pdf and Docs</string>
    <string name="app_has_permission">App has permission to Access your PDF and Docs</string>
    <string name="screen_on">Screen On</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="account">Account</string>
    <string name="pause">Pause</string>
    <string name="next">Next Page</string>
    <string name="upgrade_to_premium">Upgrade To Premium</string>
    <string name="no_ads_best_quality_human_like_voice">No Ads, Best Quality Human like Voice</string>
    <string name="language_settings">Language Settings</string>
    <string name="voice_quality">Voice Quality</string>
    <string name="useInfo">Hi there i will tell you how to use this app</string>
    <string name="dialog_messgae">By revoking permission app cant access your reading files you will need to open then manually</string>
    <string name="language">Language</string>
    <string name="sign_out">Sign Out</string>

</resources>