<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_menu"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/reading_now"
        android:icon="@drawable/ic_reading_now"
        android:title="@string/reading_now" />
    <item
        android:id="@+id/menu_use"
        android:icon="@drawable/ic_use"
        android:title="@string/how_to_use" />
    <item
        android:id="@+id/menu_haveread"
        android:icon="@drawable/ic_baseline_done_24"
        android:title="@string/have_read" />

    <item
        android:id="@+id/menu_fav"
        android:icon="@drawable/ic_filled_favorite"
        android:title="@string/fav" />
    <item
        android:id="@+id/books"
        android:icon="@drawable/ic_books"
        android:title="@string/books" />

    <item
        android:id="@+id/menu_Downloads"
        android:icon="@drawable/ic_download"
        android:title="@string/downlaods" />
    <item
        android:id="@+id/menu_Trash"
        android:icon="@drawable/ic_trash"
        android:title="@string/trash" />


    <group
        android:id="@+id/grp2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings">

        </item>
        <item
            android:id="@+id/menu_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/send_feedback">

        </item>
    </group>


</menu>