<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeAuth">


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourreader"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:fontFamily="@font/montserratregular"


        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/easily_listen_anything_you_want_to_read"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="13sp"
        android:fontFamily="@font/montserratregular"

        />



    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/home_mail_btn"
        android:background="@drawable/btn_circular_nor"
        android:textColor="@color/black"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:theme="@style/Theme.YourReader"
        android:layout_marginStart="50dp"
        android:text="@string/continue_with_id_password"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/ic_email" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/btn_circular_nor"
        android:text="@string/continue_with_google"
        android:textAllCaps="false"
        android:theme="@style/Theme.YourReader"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/googlelogo2"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/home_no_account"
        android:gravity="center|bottom"
        android:layout_gravity="bottom"
        android:layout_marginTop="90dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/don_t_have_an_account"
            android:textSize="12sp"
            android:id="@+id/lev1"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/lev2"
            android:layout_toEndOf="@id/lev1"
            android:textColor="@color/blue"
            android:layout_gravity="center"
            android:text="@string/signup"
            android:textSize="12sp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/lev1"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp" />

    </RelativeLayout>




</LinearLayout>