<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pdfVIew"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:weightSum="100"
    android:orientation="vertical"
    tools:context=".Fragments.HomeFragment">


    <com.github.barteksc.pdfviewer.PDFView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="85"
        android:id="@+id/pdfViewHome"
        android:visibility="gone"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pitch"
        android:id="@+id/lay_pitch"
        android:layout_marginStart="40dp"
        android:layout_weight="1"
        android:visibility="gone"
        android:fontFamily="@font/montserratregular"
        android:layout_marginLeft="40dp"
        />
    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarPitch"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:progress="50"
        android:visibility="gone"
        android:layout_weight="3"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed"
        android:id="@+id/lay_Speed"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/montserratregular"
        android:visibility="gone"
        android:layout_weight="1"
        android:layout_marginLeft="40dp"
        />
    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarSpeed"
        android:progress="50"
        android:visibility="gone"
        android:layout_marginTop="5dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_weight="3"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:id="@+id/btn_paly"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lay_no_file"
        android:padding="10dp"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notice_noting"
            android:fontFamily="@font/montserratregular"
            android:text="@string/noting_loaded"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:textSize="22sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:id="@+id/openFile_Home"
            android:layout_below="@+id/notice_noting"
            android:text="@string/open_file"
            android:background="@drawable/btn_circular"/>
    </RelativeLayout>




</LinearLayout>