<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fontFamily="@font/montserratsemibold"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Auth.RegisterActivity">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/go_back_rege"
        android:layout_marginTop="12dp"
        android:layout_marginStart="15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:id="@+id/bk_img"
            android:layout_centerVertical="true"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="11dp"
            android:layout_toEndOf="@+id/bk_img"
            android:fontFamily="@font/montserratsemibold"
            android:gravity="center_horizontal"
            android:text="@string/back"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:src="@drawable/logo"
        android:layout_marginTop="50dp"
        android:layout_marginStart="-10dp"
        android:id="@+id/lg_preview_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/demo_txt_1"
        android:text="@string/proceed_with_your"
        android:layout_below="@id/lg_preview_logo"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:fontFamily="@font/montserratsemibold"
        android:gravity="center_horizontal"
        android:textSize="22sp"
        android:layout_marginStart="30dp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/demo_txt_2"
        android:text="@string/registration"
        android:layout_below="@id/demo_txt_1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textSize="22sp"
        android:fontFamily="@font/montserratsemibold"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"

        />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:id="@+id/log_email_edit_lay"
        android:layout_below="@id/demo_txt_2"
        android:fontFamily="@font/montserratregular"

        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/email"
        android:textAllCaps="false"
        android:layout_marginTop="40dp"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reg_email_edit"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:fontFamily="@font/montserratsemibold"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/log_pass_edit_lay"
        android:layout_below="@id/log_email_edit_lay"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/montserratregular"
        android:layout_marginEnd="40dp"
        android:hint="@string/password"
        android:textAllCaps="false"
        android:layout_marginTop="40dp"
        app:passwordToggleEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reg_pass_edit"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_pass"
            android:fontFamily="@font/montserratsemibold" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_reg_lg"
        android:layout_below="@id/log_pass_edit_lay"
        android:background="@drawable/btn_circular"
        android:text="@string/register"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:fontFamily="@font/montserratsemibold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_continue_with"
        android:fontFamily="@font/montserratregular"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_reg_lg"
        android:textSize="12sp"
        android:id="@+id/shit_txt"
        android:layout_marginTop="10dp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="2dp"
        android:id="@+id/google_btn_reg"
        android:layout_below="@+id/shit_txt"
        android:orientation="horizontal"
        android:background="@drawable/btn_circular_nor"
        android:weightSum="100"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"

            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/google_logo"
                android:layout_centerInParent="true"

                />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="85"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_with_google"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:fontFamily="@font/montserratsemibold"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>


    </LinearLayout>




</RelativeLayout>